// network object

syntax = "proto3";

package dnetproto;

// Mandatory imports.
import "github.com/pensando/sw/nic/agent/protos/netproto/security.proto";
import "delphi.proto";

// security group object
message SecurityGroup {
    option (delphi.update_event) = true;
    delphi.ObjectMeta             Meta                  = 1;
    string                        Key                   = 2;
    netproto.SecurityGroup        SecurityGroup         = 3;
}
